// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<WholesalePrice /> should render with props 1`] = `
<WholesalePrice
  description="<b>lorem</b>"
  measure="шт."
  price={222222}
  text="Опт Детские товары"
  unitWholesalePrice={520}
>
  <div
    className=""
  >
    <Box
      display="flex"
      justifyContent="between"
      wrap={false}
    >
      <div
        className="display-flex justify-content-between"
      >
        <ForwardRef(Text)
          color="gray87"
          lineHeight={24}
          size={16}
          weight={600}
        >
          <span
            className="size-16 line-height-24 color__gray87 weight-600"
          >
            <Price
              currencyGraphemeClass="currency-grapheme"
              value={222222}
            >
              <span
                className="root"
              >
                222 222
              </span>
            </Price>
             / опт
          </span>
        </ForwardRef(Text)>
        <span
          className="price-unit"
        >
          <ForwardRef(Text)
            color="gray38"
            lineHeight={16}
            size={12}
          >
            <span
              className="size-12 line-height-16 color__gray38"
            >
              <Price
                currencyGrapheme="шт."
                currencyGraphemeClass="currency-grapheme"
                value={520}
              >
                <span
                  className="root"
                >
                  520 шт.
                </span>
              </Price>
            </span>
          </ForwardRef(Text)>
        </span>
      </div>
    </Box>
    <withGlobalListeners(WholesaleText)
      description="<b>lorem</b>"
      text="Опт Детские товары"
    >
      <WholesaleText
        addGlobalListener={[Function]}
        description="<b>lorem</b>"
        text="Опт Детские товары"
      >
        <div
          className="wholesale-text-wrapper"
        >
          <span
            className="wholesale-text"
            onClick={[Function]}
            role="note"
          >
            Опт Детские товары
          </span>
        </div>
      </WholesaleText>
    </withGlobalListeners(WholesaleText)>
  </div>
</WholesalePrice>
`;

exports[`<WholesalePrice /> should render with props 2`] = `
<WholesalePrice
  description="<b>lorem</b>"
  direction="column"
  measure="шт."
  price={222222}
  text="Опт Детские товары"
  unitWholesalePrice={520}
>
  <div
    className=""
  >
    <Box
      display="flex"
      justifyContent="start"
      wrap={true}
    >
      <div
        className="display-flex justify-content-start flex-wrap"
      >
        <ForwardRef(Text)
          color="gray87"
          lineHeight={24}
          size={16}
          weight={600}
        >
          <span
            className="size-16 line-height-24 color__gray87 weight-600"
          >
            <Price
              currencyGraphemeClass="currency-grapheme"
              value={222222}
            >
              <span
                className="root"
              >
                222 222
              </span>
            </Price>
             / опт
          </span>
        </ForwardRef(Text)>
        <withGlobalListeners(WholesaleText)
          description="<b>lorem</b>"
          text="Опт Детские товары"
        >
          <WholesaleText
            addGlobalListener={[Function]}
            description="<b>lorem</b>"
            text="Опт Детские товары"
          >
            <div
              className="wholesale-text-wrapper"
            >
              <span
                className="wholesale-text"
                onClick={[Function]}
                role="note"
              >
                Опт Детские товары
              </span>
            </div>
          </WholesaleText>
        </withGlobalListeners(WholesaleText)>
        <span
          className="price-unit"
        >
          <ForwardRef(Text)
            color="gray38"
            lineHeight={16}
            size={12}
          >
            <span
              className="size-12 line-height-16 color__gray38"
            >
              <Price
                currencyGrapheme="шт."
                currencyGraphemeClass="currency-grapheme"
                value={520}
              >
                <span
                  className="root"
                >
                  520 шт.
                </span>
              </Price>
            </span>
          </ForwardRef(Text)>
        </span>
      </div>
    </Box>
  </div>
</WholesalePrice>
`;

exports[`<WholesalePrice /> should render without props 1`] = `
<WholesalePrice>
  <div
    className=""
  >
    <Box
      display="flex"
      justifyContent="between"
      wrap={false}
    >
      <div
        className="display-flex justify-content-between"
      >
        <ForwardRef(Text)
          color="gray87"
          lineHeight={24}
          size={16}
          weight={600}
        >
          <span
            className="size-16 line-height-24 color__gray87 weight-600"
          >
            <Price
              currencyGraphemeClass="currency-grapheme"
            >
              <span
                className="root"
              />
            </Price>
             / опт
          </span>
        </ForwardRef(Text)>
      </div>
    </Box>
  </div>
</WholesalePrice>
`;
